# platform

./: .dockerignore  .env.hcp  .env.project  .env.vault  .gitignore  Makefile  README.md  TERRAFORM_SETUP.md  config.sh  config.yaml  hcp.yaml  package-lock.json
.kamal/: secrets
branding/: README.md  index.js  package.json
config/: deploy.yml
iac/: .gitignore  Makefile
py/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.yaml  conftest.py  hcp.yaml  mypy.ini  pyproject.toml  pytest.ini  tailwind.config.js
py/alembic/: env.py
py/alembic/versions/: 083844c6a41c_init.py  20250926_113958_74e9156d0365_init.py  64d96d2d5ba4_init.py
py/src/: __main__.py  config.py  logger.py  state.py
py/src/database/: __init__.py  database.py
py/src/database/models/: __init__.py  user.py
py/src/server/: __init__.py  deps.py
py/src/server/api/: __init__.py
py/src/server/api/v0/: __init__.py
py/src/server/api/v0/auth/: __init__.py  whoami.py
py/src/server/auth/: __init__.py
py/src/server/handlers/: base.py  component.py
py/src/server/health/: __init__.py
py/src/server/pages/: __init__.py  dashboard.py  index.py  login.py  settings.py
py/src/server/pages/app/: __init__.py  login.py  settings.py
py/static/css/: main.css
py/styles/: main.css
py/templates/components/: footer.html  theme-switcher.html  user.html
py/templates/layouts/: app.html  base.html  home.html  minimal.html
py/templates/pages/: index.html
py/templates/pages/app/: dashboard.html  login.html  settings.html
py/tests/database/: test_user.py
(+193 files in other folders)
